--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,7 @@ importFrom(gdxdt,writegdx.parameter)
 importFrom(gdxrrw,rgdx)
 importFrom(madrat,calcOutput)
 importFrom(magclass,lowpass)
-importFrom(magrittr,`%>%`)
+importFrom(magrittr,"%>%")
 importFrom(reporttransport,reportEdgeTransport)
 importFrom(reporttransport,reportToREMINDcapitalCosts)
 importFrom(reporttransport,reportToREMINDenergyEfficiency)
